# RLTelescopes

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: test_on_push.yml
results/baseline/: history.csv  schedule.csv  schedule_metrics.csv  schedule_states.csv
results/increased_penalty/: history.csv  schedule.csv
results/low_airmass_default/: schedule.csv  schedule_metrics.csv  schedule_states.csv
results/lstm_test/: model_history.csv
results/pure_rl_airmass/: history.csv  schedule.csv  schedule_metrics.csv  schedule_states.csv
results/sequential_default/: schedule.csv  schedule_metrics.csv  schedule_states.csv
results/test_dir/: history.csv  schedule.csv  schedule_metrics.csv  schedule_states.csv
results/variable_default/: schedule.csv  schedule_metrics.csv  schedule_states.csv
results/weighted_airmass/: history.csv  schedule.csv
results/weighted_delve/: history.csv
results/weighted_delve_rl/: history.csv  schedule.csv  schedule_metrics.csv  schedule_states.csv
rltelescope/: low_airmass_scheduler.py  model_rollout.py  observation_program.py  parametric_rl_scheduler.py  plots.py  pure_rl_scheduler.py  rl_scheduler.py  scheduler.py  squentical_scheduler.py  trainer.py  variable_scheduler.py
src/: __init__.py  model_rollout.py  observation_program.py  parametric_rl_scheduler.py  plots.py  rl_scheduler.py  scheduler.py  squentical_scheduler.py  trainer.py  variable_scheduler.py
tests/: test_airmass_scheduler.py  test_observation_program.py  test_schedule_trainer.py
(+35 files in other folders)
