[tool.poetry]
name = "deeptemplate-science"
version = "0.1.0"
description = "a template for a science motivated project, focus on ease of reproducablity"
authors = ["voetberg <magpie127@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.26.2"
ray = "^2.0.0"
astropy = "^5.1"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
